--- a/backend/package.json
+++ b/backend/package.json
@@ -11,10 +11,13 @@
     "dotenv": "^17.2.3",
     "ejs": "^4.0.1",
     "express": "~4.16.1",
+    "express-rate-limit": "^8.2.1",
+    "express-validator": "^7.3.1",
     "http-errors": "~1.6.3",
     "jade": "~1.11.0",
     "morgan": "~1.9.1",
     "mysql2": "^3.16.1",
+    "nodemailer": "^7.0.12",
     "sequelize": "^6.37.7"
   },
   "devDependencies": {
