--- a/backend/package.json
+++ b/backend/package.json
@@ -3,6 +3,7 @@
   "version": "0.0.0",
   "private": true,
   "scripts": {
+    "start": "node ./bin/www",
     "local": "env-cmd -f ../.env.local nodemon ./bin/www",
     "prod": "env-cmd -f ../.env.prod nodemon ./bin/www",
     "test": "env-cmd -f ../.env.gmail nodemon ./bin/www"
